kylin-music (1.1.0-19hw) v101.hw; urgency=medium

  * [BUG]
  - 95920, 【音乐】缩放率150%下，音乐标题栏图标截断显示不全 
  - 92085, 【音乐】缩放比150%，字号16，音乐图标显示不全
  - 92088, 【音乐】鼠标点击mini模式麒麟音乐，轻微向下拖动鼠标，窗口跳跃移动
  - 92317, 【音乐】使用且操作过程中闪退
  - 96944, 【声音】线控耳机音量只能减，不能加

  * 需求号或者任务号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- yushuoqi <yushuoqi@kylinos.cn>  Wed, 19 Jan 2022 14:26:41 +0800

kylin-music (1.1.0-18hw) v101.hw; urgency=medium

  * BUG号：无.
  * 需求号或者任务号：无.
  * 其他改动说明：
      - 合并主线代码：增加藏文翻译.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Wed, 25 Nov 2021 09:15:36 +0800

kylin-music (1.1.0-17hw) v101.hw; urgency=medium

  * BUG号：
      - 79522【cpm】加入不同格式音乐到播放列表，播放模式为列表循环，m4a aac格式音频播放完后自动暂停.
  * 需求号或者任务号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Tue, 28 Sep 2021 13:54:36 +0800

kylin-music (1.1.0-16hw) v101.hw; urgency=medium

  * BUG号：
      - 67326【cpm】【HUAWEI】【Audio】【V4】【L2】使用部分USB耳机时 响度比正常响度小很多.
  * 需求号或者任务号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Sun, 26 Sep 2021 20:00:01 +0800

kylin-music (1.1.0-16hw) v101.hw; urgency=medium

  * BUG号：
      - 67326【cpm】【HUAWEI】【Audio】【V4】【L2】使用部分USB耳机时 响度比正常响度小很多.
  * 需求号或者任务号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Wed, 22 Sep 2021 15:50:42 +0800

kylin-music (1.1.0-15hw) v101.hw; urgency=medium

  * BUG号：
      - 81760【cpm】【HUAWEI】【KOS】【VN1】【PTOF】音乐不支持amr,wma,wav,m4a,aac格式
      - 80999【cpm】【三方应用】【VN1】【L1】双击m4a格式音频文件，播放软件为影音，不是音乐
      - 79704【cpm】双击m4a格式音频文件，播放软件为影音，不是音乐
      - 79522【cpm】加入不同格式音乐到播放列表，播放模式为列表循环，m4a aac格式音频播放完后自动暂停.
  * 需求号或者任务号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Fri, 15 Sep 2021 15:50:42 +0800

kylin-music (1.1.0-14hw) v101.hw; urgency=medium

  * BUG号：无.
  * 需求号或者任务号：无.
  * 其他改动说明：
      - 去掉SP1有的搜索功能.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Tue, 14 Sep 2021 10:22:50 +0800

kylin-music (1.1.0-13hw) v101.hw; urgency=medium

  * BUG号：