@@ -1,4 +1,5 @@
 #!/usr/bin/env bash
 # -* - coding: UTF-8 -* -
 
-rm -f kylin-music.pro.user
+rm -f kylin-music.pro.user \
+    debian/files
